<resources>
    <string name="app_name">AppPortfolio</string>
    <string name="title">Rob Graziano - Android Developer</string>
    <string name="movie_guide_button_label">MovieGuide</string>
    <string name="stock_hawk_button_label">Stock Hawk</string>
    <string name="bigger_app_button_label">Bigger</string>
    <string name="material_app_button_label">Material</string>
    <string name="ubiquitous_app_button_label">Ubiquitous</string>
    <string name="capstone_app_button_label">Capstone</string>
</resources>
