<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:columnCount="2"
        android:layout_centerInParent="true"
        tools:context="com.gzr7702.appportfolio.MainActivity">

        <TextView
            android:id="@+id/text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2" />

        <Button
            android:id="@+id/movie_guide_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/movie_guide_button_label"
            android:padding="75dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="1" />

        <Button
            android:id="@+id/stock_hawk_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/stock_hawk_button_label"
            android:padding="75dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="1" />

        <Button
            android:id="@+id/bigger_app_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/bigger_app_button_label"
            android:padding="75dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="1" />

        <Button
            android:id="@+id/material_app_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/material_app_button_label"
            android:padding="75dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnSpan="1" />

        <Button
            android:id="@+id/ubiquitous_app_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/ubiquitous_app_button_label"
            android:padding="75dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="1" />

        <Button
            android:id="@+id/capstone_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/capstone_app_button_label"
            android:padding="75dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnSpan="1" />
    </GridLayout>
</RelativeLayout>
